test/rules/single_criterion/resource_limit/memory_max_request/config.json
{
  "description": "Deny workloads whose container memory request is less than 256Mi",
  "runKwctl": true,
  "testWorkspace": "../fixtures/",
  "accept": [
    "deployments/resource_memory_request_128Mi.yaml"
  ],
  "reject": [
    "deployments/resource_memory_request_512Mi.yaml"
  ]
}
